# Ferro-kit

./: .gitignore  CLAUDE.md  Cargo.toml  findings.md  progress.md  task_plan.md
.claude-memory/: project_state.md
docs/book/html/: 404 2.html  404.html  cli-reference 2.html  cli-reference.html  data-model 2.html  data-model.html  index.html  installation 2.html  installation.html  introduction 2.html  print 2.html  print.html  python.html  searcher-c2a407aa 2.js  searcher-c2a407aa.js  searchindex-87948516.js  searchindex-e02a5889.js  toc 2.html  toc-3dd42c47.js  toc-4cd03dbb.js  toc.html
docs/src/: cli-reference.md  installation.md  introduction.md  python.md
docs/src/analysis/: chg-sdf.md  network.md
docs/src/workflow/: job-builders.md  spin.md
docs/superpowers/plans/: 2026-05-17-msd-plot-diffusion-fit.md
ferro-analysis/: Cargo.toml
ferro-analysis/src/: lib.rs  trajectory_analysis.rs
ferro-analysis/src/dft/: bader.rs  (+4 more)
ferro-cli/: Cargo.toml
ferro-cli/src/: help.rs  io_dispatch.rs  plot.rs
ferro-core/: Cargo.toml
ferro-core/src/: cell.rs  charge_grid.rs  cluster.rs  cube_data.rs  frame.rs  lib.rs  network_type.rs  spin.rs  units.rs
ferro-io/: Cargo.toml
ferro-io/src/: lib.rs
ferro-python/: Cargo.toml  README.md  pyproject.toml
ferro-python/src/: analysis.rs  io.rs  lib.rs  structure.rs  types.rs
ferro-structure/: Cargo.toml
ferro-structure/src/: box_builder.rs  cluster.rs  lib.rs  merge.rs  supercell.rs  typing.rs  vacuum.rs
ferro-workflow/: Cargo.toml
ferro-workflow/src/: cp2k.rs  cp2k_basis_db.rs  job_builder.rs  lib.rs  qe.rs
(+78 files in other folders)
